--- a/index.html
+++ b/index.html
@@ -128,11 +128,9 @@
                </div>
                <div class="offset-lg-1 col-lg-5 col-sm-8 col-md-6">
                   <div class="about_text">
-                     <h2>Conoce nuestros <span> servicios y unidades</span> en renta para tus eventos.</h2>
-                     <p>Contamos con unidades de diferentes capacidades, desde un autobús de 44 plazas hasta una
-                        camioneta
-                        para grupos mas pequeños de 23 y 17 pasajeros.</p>
-                     <a class="btn_1" href="https://wa.me/525547214435/?text=Solicito%20%20cotización" target="_blank"
+                     <h2>Conoce nuestros <span> servicios y halojamientos</span> en nuestro sitio.</h2>
+                     <p>Contamos con una amplia gama de paquetes individuales y hasta empresariales, con conexion directa a los mejores hoteles del mundo.</p>
+                     <a class="btn_1" href="https://wa.me/54911214435/?text=Solicito%20%20cotización" target="_blank"
                         data-aos="zoom-out-left"><img src="img/icon/logo-wasap.png" width="50" height="50"> Cotizar</a>
                   </div>
                </div>
