--- a/index.html
+++ b/index.html
@@ -102,8 +102,7 @@
          <div class="container">
             <div class="row">
                <div class="col-12">
-                  <h1 class="about-title text-center"><span>AG Renta</span>, tu proveedor de renta de autobuses y
-                     camionetas.
+                  <h1 class="about-title text-center"><span>Hotejs</span>, tu agencia de confianza.
                   </h1>
                </div>
             </div>
