--- a/clientes.html
+++ b/clientes.html
@@ -23,7 +23,7 @@
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
-   <title>Algunos de nuestros clientes - AG Renta</title>
+   <title>Algunos de nuestros clientes - Hotejs</title>
 </head>
 
 <body>
@@ -118,44 +118,6 @@
       </section>
 
 
-
-      <!--
-      <section class="gallery-block">
-         <div class="container d-flex justify-content-around">
-             <div class="row">
-                 <div class="hover-effect">
-                     <div class="grid-sizer"></div>
-                     <div class="grid-item percent37 gallery-image">
-                         <a class="example-image-link img-responsive" href="img/clientes/gallery1-1.jpg" data-lightbox="example-1"><img src="img/clientes/gallery1.png" class="img-responsive" alt="Clientes"></a>
-                     </div>
-                     <div class="grid-item percent25 gallery-image">
-                         <a class="example-image-link img-responsive" href="img/clientes/gallery2-2.jpg" data-lightbox="example-1"><img src="img/clientes/gallery2.png" class="img-responsive" alt="gallery1"></a>
-                     </div>
-                     <div class="grid-item percent37 gallery-image">
-                         <a class="example-image-link img-responsive" href="img/clientes/gallery3-3.jpg" data-lightbox="example-1"><img src="img/clientes/gallery3.png" class="img-responsive" alt="gallery1"></a>
-                     </div>
-                     <div class="grid-item percent25 gallery-image">
-                         <a class="example-image-link img-responsive" href="img/clientes/gallery4-4.jpg" data-lightbox="example-1"><img src="img/clientes/gallery4.png" class="img-responsive" alt="gallery1"></a>
-                     </div>
-                     <div class="grid-item percent37 gallery-image">
-                         <a class="example-image-link img-responsive" href="img/clientes/gallery5-5.jpg" data-lightbox="example-1"><img src="img/clientes/gallery5.png" class="img-responsive" alt="gallery1"></a>
-                     </div>
-                     <div class="grid-item percent20 gallery-image">
-                         <a class="example-image-link img-responsive" href="img/clientes/gallery6-6.jpg" data-lightbox="example-1"><img src="img/clientes/gallery6.png" class="img-responsive" alt="gallery1"></a>
-                     </div>
-                     <div class="grid-item percent20 gallery-image">
-                         <a class="example-image-link img-responsive" href="img/clientes/gallery7-7.jpg" data-lightbox="example-1"><img src="img/clientes/gallery7.png" class="img-responsive" alt="gallery1"></a>
-                     </div>
-                     <div class="grid-item percent20 gallery-image">
-                         <a class="example-image-link img-responsive" href="img/clientes/gallery8-8.jpg" data-lightbox="example-1"><img src="img/clientes/gallery8.png" class="img-responsive" alt="gallery1"></a> 
-                     </div>
-                 </div>
-             </div>
-         </div>
-     </section>
--->
-
-
    </main>
 
    <!--  FOOTER  -->
@@ -168,11 +130,10 @@
                   <p>Dale click a la red social de tu preferencia.</p>
                   <div class="footer_icon social_icon">
                      <ul class="list-unstyled text-center">
-                        <li><a href="https://www.facebook.com/hoteljs" target="_blank"
-                              class="bi bi-facebook"></a></li>
+                        <li><a href="https://www.facebook.com/hoteljs" target="_blank" class="bi bi-facebook"></a></li>
                         <li><a href="https://twitter.com/hoteljs" target="_blank" class="bi bi-twitter"></a></li>
-                        <li><a href="https://www.instagram.com/hoteljs" target="_blank"
-                              class="bi bi-instagram"></a></li>
+                        <li><a href="https://www.instagram.com/hoteljs" target="_blank" class="bi bi-instagram"></a>
+                        </li>
                      </ul>
                   </div>
                </div>
@@ -233,7 +194,8 @@
             <div class="col-lg-12">
                <div class="copyright_text text-center">
                   <p>
-                     Copyright &copy;<script>
+                     Copyright &copy;
+                     <script>
                         document.write(new Date().getFullYear());
                      </script> Agencia hoteljs
                   </p>
@@ -248,7 +210,7 @@
    <!-- Option 1: Bootstrap Bundle with Popper -->
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-   </script>
+      </script>
    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
    <script>
       AOS.init({
