--- a/contacto.html
+++ b/contacto.html
@@ -25,7 +25,7 @@
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
-   <title>Ponte en contacto - AG Renta</title>
+   <title>Ponte en contacto - Hotejs</title>
 </head>
 
 <body>
