--- a/empresa.html
+++ b/empresa.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
-    <title>Conoce nuestra empresa - AG Renta</title>
+    <title>Conoce nuestra empresa - Hotejs</title>
 </head>
 
 <body>
