--- a/contacto.html
+++ b/contacto.html
@@ -77,11 +77,15 @@
          <div class="container">
             <div class="row">
                <div class="col-12">
-                  <h2 class="contact-title text-center">Consulte con su asistente de confianza para las vacaciones de sus sueños</h2>
+                  <h2 class="contact-title text-center">Consulte con su asistente de confianza para las vacaciones de
+                     sus sueños</h2>
                </div>
 
                <div class="col-12 col-sm-12 mapa" data-aos="zoom-in">
-                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.1074753991734!2d-58.3752478!3d-34.6014437!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccacc6661dc35%3A0x3dbb09e7dd76e3a5!2sFlorida%20555%2C%20C1005AAK%20CABA!5e0!3m2!1ses-419!2sar!4v1668371645828!5m2!1ses-419!2sar" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                  <iframe
+                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.1074753991734!2d-58.3752478!3d-34.6014437!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccacc6661dc35%3A0x3dbb09e7dd76e3a5!2sFlorida%20555%2C%20C1005AAK%20CABA!5e0!3m2!1ses-419!2sar!4v1668371645828!5m2!1ses-419!2sar"
+                     width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy"
+                     referrerpolicy="no-referrer-when-downgrade"></iframe>
                </div>
             </div>
 
@@ -146,11 +150,10 @@
                   <p>Dale click a la red social de tu preferencia.</p>
                   <div class="footer_icon social_icon">
                      <ul class="list-unstyled text-center">
-                        <li><a href="https://www.facebook.com/hoteljs" target="_blank"
-                              class="bi bi-facebook"></a></li>
+                        <li><a href="https://www.facebook.com/hoteljs" target="_blank" class="bi bi-facebook"></a></li>
                         <li><a href="https://twitter.com/hoteljs" target="_blank" class="bi bi-twitter"></a></li>
-                        <li><a href="https://www.instagram.com/hoteljs" target="_blank"
-                              class="bi bi-instagram"></a></li>
+                        <li><a href="https://www.instagram.com/hoteljs" target="_blank" class="bi bi-instagram"></a>
+                        </li>
                      </ul>
                   </div>
                </div>
@@ -173,9 +176,6 @@
                      </li>
                      <li class="nav-item ">
                         <a class="nav-link" aria-current="page" href="empresa.html">Empresa</a>
-                     </li>
-                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="unidades.html">Unidades</a>
                      </li>
                      <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="clientes.html">Clientes</a>
@@ -211,7 +211,8 @@
             <div class="col-lg-12">
                <div class="copyright_text text-center">
                   <p>
-                     Copyright &copy;<script>
+                     Copyright &copy;
+                     <script>
                         document.write(new Date().getFullYear());
                      </script> Agencia hoteljs
                   </p>
@@ -226,7 +227,7 @@
    <!-- Option 1: Bootstrap Bundle with Popper -->
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-   </script>
+      </script>
    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
    <script>
       AOS.init();
