--- a/clientes.html
+++ b/clientes.html
@@ -5,7 +5,7 @@
    <!-- Required meta tags -->
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
-   <meta name="description" content="Nuestros clientes. Algunos clientes satisfechos que ya han confiado en AG Renta.">
+   <meta name="description" content="Nuestros clientes. Algunos clientes satisfechos que ya han confiado en Hoteljs.">
    <meta name="keywords" content="traslado de personal, vacaciones, viajes económicos, clientes">
 
    <!-- Bootstrap CSS -->
