--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <meta name="description"
-      content="En AG Renta disponemos de camionetas para que viajes con los tuyos en completa seguridad y confort. Damos servicio a toda la república.">
-   <meta name="keywords" content="renta de camioneta, vacaciones, viajes económicos, ag renta">
+      content="En Hotejs ofrecemos la mas grande variedad de paquetes vacacionales en todo el mundo con la mas amplia variedad de hoteles y amenities.">
 
    <!-- Bootstrap CSS -->
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
