--- a/contacto.html
+++ b/contacto.html
@@ -7,7 +7,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <meta name="description"
       content="Conoce nuestra ubicación y forma de contacto. Tenemos lo que necesitas para tu viaje.">
-   <meta name="keywords" content="renta de camioneta, vacaciones, viajes económicos, clientes, forma de contacto">
+   <meta name="keywords" content="hospedajes, vacaciones, viajes económicos, clientes, forma de contacto">
 
    <!-- Bootstrap CSS -->
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
