--- a/empresa.html
+++ b/empresa.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description"
-        content="AG Renta le ofrece convenientes planes de renta de camionetas para traslado de personal o viajes de placer.">
-    <meta name="keywords" content="camionetas, vacaciones, viajes económicos, nuestra empresa, nosotros">
+        content="En Hotejs ofrecemos la mas grande variedad de paquetes vacacionales en todo el mundo con la mas amplia variedad de hoteles y amenities.">
+    <meta name="keywords" content="aviones, vacaciones, viajes económicos, nuestra empresa, nosotros">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -75,8 +75,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h1 class="about-title text-center"><span>AG Renta</span>, tu proveedor de renta de autobuses y
-                            camionetas.
+                        <h1 class="about-title text-center"><span>Hoteljs</span>, tu proveedor de viajes y
+                            hoteles.
                         </h1>
                     </div>
                 </div>
