--- a/paquetes.html
+++ b/paquetes.html
@@ -6,8 +6,8 @@
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <meta name="description"
-      content="Disfruta de nuestros paquetes vacacionales, agrega tus pases y accede a la diversión.">
-   <meta name="keywords" content="paquetes vacacionales, pulman de morelos, coderhouse, dev_sgarcia, curso JavaScript">
+   content="En Hotejs ofrecemos la mas grande variedad de paquetes vacacionales en todo el mundo con la mas amplia variedad de hoteles y amenities.">
+   <meta name="keywords" content="paquetes vacacionales">
 
    <!-- Bootstrap CSS -->
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
